labs/05-containers-k8s/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-store
  labels:
    name: cloud-store
    environment: production
